--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
     />
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
     <header class="header">
@@ -27,7 +27,7 @@
           </a>
           <ul class="header__site-nav list">
             <li class="header__item-page">
-              <a class="header__link header__link-active" href="./index.html">Студия</a>
+              <a class="header__link header__link--active" href="./index.html">Студия</a>
             </li>
             <li class="header__item-page">
               <a class="header__link" href="./portfolio.html">Портфолио</a>
@@ -172,15 +172,15 @@
                 <h3 class="our-team__member-name">Игорь Демьяненко</h3>
                 <p class="our-team__member-specialization">Product Designer</p>
               </div>
-              <ul class="social-networks__list list">
-                <li class="social-network__item">
-                  <a class="social-network__link"
+              <ul class="social-networks list">
+                <li class="social-networks__item">
+                  <a class="social-networks__link"
                     href="https://www.instagram.com/"
                     target="_blank"
                     rel="noopener noreferrer"
                   >
                     <svg
-                      class="social-network__icon"
+                      class="social-networks__icon"
                       width="20px"
                       height="20px"
                     >
@@ -188,35 +188,35 @@
                     </svg>
                   </a>
                 </li>
-                <li class="social-network__item">
-                  <a class="social-network__link
+                <li class="social-networks__item">
+                  <a class="social-networks__link
                     href="https://twitter.com/"
                     target="_blank"
                     rel="noopener noreferrer"
                   >
-                    <svg class="social-network__icon" width="20px" height="20px">
+                    <svg class="social-networks__icon" width="20px" height="20px">
                       <use href="./images/symbol-defs.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="social-network__item">
-                  <a class="social-network__link
+                <li class="social-networks__item">
+                  <a class="social-networks__link
                     href="https://www.facebook.com/"
                     target="_blank"
                     rel="noopener noreferrer"
                   >
-                    <svg class="social-network__icon" width="20px" height="20px">
+                    <svg class="social-networks__icon" width="20px" height="20px">
                       <use href="./images/symbol-defs.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="social-network__item">
-                  <a class="social-network__link
+                <li class="social-networks__item">
+                  <a class="social-networks__link
                     href="https://www.linkedin.com/"
                     target="_blank"
                     rel="noopener noreferrer"
                   >
-                    <svg class="social-network__icon" width="20px" height="20px">
+                    <svg class="social-networks__icon" width="20px" height="20px">
                       <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                     </svg>
                   </a>
@@ -235,47 +235,47 @@
                 <h3 class="our-team__member-name">Ольга Репина</h3>
                 <p class="our-team__member-specialization">Frontend Developer</p>
               </div>
-              <ul class="social-networks__list list">
-                <li class="social-network__item">
-                  <a class="social-network__link
+              <ul class="social-networks list">
+                <li class="social-networks__item">
+                  <a class="social-networks__link
                     href="https://www.instagram.com/"
                     target="_blank"
                     rel="noopener noreferrer"
                   >
-                    <svg class="social-network__icon" width="20px" height="20px">
+                    <svg class="social-networks__icon" width="20px" height="20px">
                       <use href="./images/symbol-defs.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="social-network__item">
-                  <a class="social-network__link
+                <li class="social-networks__item">
+                  <a class="social-networks__link
                     href="https://twitter.com/"
                     target="_blank"
                     rel="noopener noreferrer"
                   >
-                    <svg class="social-network__icon" width="20px" height="20px">
+                    <svg class="social-networks__icon" width="20px" height="20px">
                       <use href="./images/symbol-defs.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="social-network__item">
-                  <a class="social-network__link
+                <li class="social-networks__item">
+                  <a class="social-networks__link
                     href="https://www.facebook.com/"
                     target="_blank"
                     rel="noopener noreferrer"
                   >
-                    <svg class="social-network__icon" width="20px" height="20px">
+                    <svg class="social-networks__icon" width="20px" height="20px">
                       <use href="./images/symbol-defs.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="social-network__item">
-                  <a class="social-network__link
+                <li class="social-networks__item">
+                  <a class="social-networks__link
                     href="https://www.linkedin.com/"
                     target="_blank"
                     rel="noopener noreferrer"
                   >
-                    <svg class="social-network__icon" width="20px" height="20px">
+                    <svg class="social-networks__icon" width="20px" height="20px">
                       <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                     </svg>
                   </a>
@@ -294,47 +294,47 @@
                 <h3 class="our-team__member-name">Николай Тарасов</h3>
                 <p class="our-team__member-specialization">Marketing</p>
               </div>
-              <ul class="social-networks__list list">
-                <li class="social-network__item">
-                  <a class="social-network__link
+              <ul class="social-networks list">
+                <li class="social-networks__item">
+                  <a class="social-networks__link
                     href="https://www.instagram.com/"
                     target="_blank"
                     rel="noopener noreferrer"
                   >
-                    <svg class="social-network__icon" width="20px" height="20px">
+                    <svg class="social-networks__icon" width="20px" height="20px">
                       <use href="./images/symbol-defs.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="social-network__item">
-                  <a class="social-network__link
+                <li class="social-networks__item">
+                  <a class="social-networks__link
                     href="https://twitter.com/"
                     target="_blank"
                     rel="noopener noreferrer"
                   >
-                    <svg class="social-network__icon" width="20px" height="20px">
+                    <svg class="social-networks__icon" width="20px" height="20px">
                       <use href="./images/symbol-defs.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="social-network__item">
-                  <a class="social-network__link
+                <li class="social-networks__item">
+                  <a class="social-networks__link
                     href="https://www.facebook.com/"
                     target="_blank"
                     rel="noopener noreferrer"
                   >
-                    <svg class="social-network__icon" width="20px" height="20px">
+                    <svg class="social-networks__icon" width="20px" height="20px">
                       <use href="./images/symbol-defs.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="social-network__item">
-                  <a class="social-network__link
+                <li class="social-networks__item">
+                  <a class="social-networks__link
                     href="https://www.linkedin.com/"
                     target="_blank"
                     rel="noopener noreferrer"
                   >
-                    <svg class="social-network__icon" width="20px" height="20px">
+                    <svg class="social-networks__icon" width="20px" height="20px">
                       <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                     </svg>
                   </a>
@@ -353,47 +353,47 @@
                 <h3 class="our-team__member-name">Михаил Ермаков</h3>
                 <p class="our-team__member-specialization">UI Designer</p>
               </div>
-              <ul class="social-networks__list list">
-                <li class="social-network__item">
-                  <a class="social-network__link
+              <ul class="social-networks list">
+                <li class="social-networks__item">
+                  <a class="social-networks__link
                     href="https://www.instagram.com/"
                     target="_blank"
                     rel="noopener noreferrer"
                   >
-                    <svg class="social-network__icon" width="20px" height="20px">
+                    <svg class="social-networks__icon" width="20px" height="20px">
                       <use href="./images/symbol-defs.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="social-network__item">
-                  <a class="social-network__link
+                <li class="social-networks__item">
+                  <a class="social-networks__link
                     href="https://twitter.com/"
                     target="_blank"
                     rel="noopener noreferrer"
                   >
-                    <svg class="social-network__icon" width="20px" height="20px">
+                    <svg class="social-networks__icon" width="20px" height="20px">
                       <use href="./images/symbol-defs.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="social-network__item">
-                  <a class="social-network__link
+                <li class="social-networks__item">
+                  <a class="social-networks__link
                     href="https://www.facebook.com/"
                     target="_blank"
                     rel="noopener noreferrer"
                   >
-                    <svg class="social-network__icon" width="20px" height="20px">
+                    <svg class="social-networks__icon" width="20px" height="20px">
                       <use href="./images/symbol-defs.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="social-network__item">
-                  <a class="social-network__link
+                <li class="social-networks__item">
+                  <a class="social-networks__link
                     href="https://www.linkedin.com/"
                     target="_blank"
                     rel="noopener noreferrer"
                   >
-                    <svg class="social-network__icon" width="20px" height="20px">
+                    <svg class="social-networks__icon" width="20px" height="20px">
                       <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                     </svg>
                   </a>
@@ -488,47 +488,47 @@
         </div>
         <div class="footer__join-container">
           <h3 class="footer__join-title">присоединяйтесь</h3>
-          <ul class="social-networks__list list">
-            <li class="social-network__item">
-              <a class="social-network__link social-network__footer-link"
+          <ul class="social-networks list">
+            <li class="social-networks__item">
+              <a class="social-networks__link social-networks__footer-link"
                 href="https://www.instagram.com/"
                 target="_blank"
                 rel="noopener noreferrer"
                               >
-                <svg class="social-network__icon" width="20px" height="20px">
+                <svg class="social-networks__icon" width="20px" height="20px">
                   <use href="./images/symbol-defs.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
-            <li class="social-network__item">
-              <a class="social-network__link social-network__footer-link"
+            <li class="social-networks__item">
+              <a class="social-networks__link social-networks__footer-link"
                 href="https://twitter.com/"
                 target="_blank"
                 rel="noopener noreferrer"
                               >
-                <svg class="social-network__icon" width="20px" height="20px">
+                <svg class="social-networks__icon" width="20px" height="20px">
                   <use href="./images/symbol-defs.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
-            <li class="social-network__item">
-              <a class="social-network__link social-network__footer-link"
+            <li class="social-networks__item">
+              <a class="social-networks__link social-networks__footer-link"
                 href="https://www.facebook.com/"
                 target="_blank"
                 rel="noopener noreferrer"
                               >
-                <svg class="social-network__icon" width="20px" height="20px">
+                <svg class="social-networks__icon" width="20px" height="20px">
                   <use href="./images/symbol-defs.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
-            <li class="social-network__item">
-              <a class="social-network__link social-network__footer-link"
+            <li class="social-networks__item">
+              <a class="social-networks__link social-networks__footer-link"
                 href="https://www.linkedin.com/"
                 target="_blank"
                 rel="noopener noreferrer"
                               >
-                <svg class="social-network__icon" width="20px" height="20px">
+                <svg class="social-networks__icon" width="20px" height="20px">
                   <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                 </svg>
               </a>
