--- a/portfolio.html
+++ b/portfolio.html
@@ -15,11 +15,11 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
     />
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
     <header class="header">
-      <div class="header__nav container">
+      <div class="header__container container">
         <nav class="header__navigation">
           <a class="logo header__logo" href="./index.html">
             <span class="logo__word-web">Web</span
@@ -31,7 +31,7 @@
             </li>
             <li class="header__item-page">
               <a
-                class="header__link header__link-active"
+                class="header__link header__link--active"
                 href="./portfolio.html"
                 >Портфолио</a
               >
@@ -65,36 +65,40 @@
       <section class="portfolio section">
         <div class="portfolio__container container">
           <h1 class="portfolio__title visually-hidden">Фильтр портфолио</h1>
-          <ul class="portfolio__filter-bar list">
-            <li class="portfolio__item">
-              <button class="portfolio__button" type="button">Все</button>
+          <ul class="filter-bar list">
+            <li class="filter-bar__item">
+              <button class="filter-bar__button" type="button">Все</button>
             </li>
-            <li class="portfolio__item">
-              <button class="portfolio__button" type="button">Веб-сайты</button>
+            <li class="filter-bar__item">
+              <button class="filter-bar__button" type="button">
+                Веб-сайты
+              </button>
             </li>
-            <li class="portfolio__item">
-              <button class="portfolio__button" type="button">
+            <li class="filter-bar__item">
+              <button class="filter-bar__button" type="button">
                 Приложения
               </button>
             </li>
-            <li class="portfolio__item">
-              <button class="portfolio__button" type="button">Дизайн</button>
+            <li class="filter-bar__item">
+              <button class="filter-bar__button" type="button">Дизайн</button>
             </li>
-            <li class="portfolio__item">
-              <button class="portfolio__button" type="button">Маркетинг</button>
+            <li class="filter-bar__item">
+              <button class="filter-bar__button" type="button">
+                Маркетинг
+              </button>
             </li>
           </ul>
-          <ul class="portfolio__works list">
-            <li class="portfolio__card">
-              <a class="portfolio__link" href="">
-                <div class="portfolio__card-wrapper">
+          <ul class="works list">
+            <li class="works__card">
+              <a class="works__link" href="">
+                <div class="works__image-wrapper">
                   <img
-                    class="portfolio__image"
+                    class="works__image"
                     src="./images/img01.jpg"
                     alt="приклад веб сторінки відкритий на ноутбуці"
                     width="370"
                   />
-                  <p class="portfolio__meta">
+                  <p class="works__meta">
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                     Mollitia illum ab, suscipit esse tenetur aut velit placeat
                     dignissimos assumenda voluptatum? Exercitationem aliquam
@@ -102,191 +106,187 @@
                   </p>
                 </div>
 
-                <div class="portfolio__work-wrapper">
-                  <h2 class="portfolio__image-title">Технокряк</h2>
-                  <p class="portfolio__group-name">Веб-сайт</p>
+                <div class="works__group-wrapper">
+                  <h2 class="works__image-title">Технокряк</h2>
+                  <p class="works__group-name">Веб-сайт</p>
                 </div>
               </a>
             </li>
-            <li class="portfolio__card">
-              <a class="portfolio__link" href="">
-                <div class="portfolio__card-wrapper">
+            <li class="works__card">
+              <a class="works__link" href="">
+                <div class="works__image-wrapper">
                   <img
-                    class="portfolio__image"
+                    class="works__image"
                     src="./images/img02.jpg"
                     alt="постер New Orlean vs Golden Star"
                     width="370"
                   />
-                  <p class="portfolio__meta">
+                  <p class="works__meta">
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                     Mollitia illum ab, suscipit esse tenetur aut velit placeat
                     dignissimos assumenda voluptatum? Exercitationem aliquam
                     ipsam rem magni molestiae, quo error repudiandae quasi.
                   </p>
                 </div>
-                <div class="portfolio__work-wrapper">
-                  <h2 class="portfolio__image-title">
+                <div class="works__group-wrapper">
+                  <h2 class="works__image-title">
                     Постер New Orlean vs Golden Star
                   </h2>
-                  <p class="portfolio__group-name">Дизайн</p>
+                  <p class="works__group-name">Дизайн</p>
                 </div>
               </a>
             </li>
-            <li class="portfolio__card">
-              <a class="portfolio__link" href="">
-                <div class="portfolio__card-wrapper">
+            <li class="works__card">
+              <a class="works__link" href="">
+                <div class="works__image-wrapper">
                   <img
-                    class="portfolio__image"
+                    class="works__image"
                     src="./images/img03.jpg"
                     alt="логотип ресторана Seafood"
                     width="370"
                   />
-                  <p class="portfolio__meta">
+                  <p class="works__meta">
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                     Mollitia illum ab, suscipit esse tenetur aut velit placeat
                     dignissimos assumenda voluptatum? Exercitationem aliquam
                     ipsam rem magni molestiae, quo error repudiandae quasi.
                   </p>
                 </div>
-                <div class="portfolio__work-wrapper">
-                  <h2 class="portfolio__image-title">Ресторан Seafood</h2>
-                  <p class="portfolio__group-name">Приложение</p>
+                <div class="works__group-wrapper">
+                  <h2 class="works__image-title">Ресторан Seafood</h2>
+                  <p class="works__group-name">Приложение</p>
                 </div>
               </a>
             </li>
-            <li class="portfolio__card">
-              <a class="portfolio__link" href="">
-                <div class="portfolio__card-wrapper">
+            <li class="works__card">
+              <a class="works__link" href="">
+                <div class="works__image-wrapper">
                   <img
-                    class="portfolio__image"
+                    class="works__image"
                     src="./images/img04.jpg"
                     alt="повнорозмірні навушники"
                     width="370"
                   />
-                  <p class="portfolio__meta">
+                  <p class="works__meta">
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                     Mollitia illum ab, suscipit esse tenetur aut velit placeat
                     dignissimos assumenda voluptatum? Exercitationem aliquam
                     ipsam rem magni molestiae, quo error repudiandae quasi.
                   </p>
                 </div>
-                <div class="portfolio__work-wrapper">
-                  <h2 class="portfolio__image-title">Проект Prime</h2>
-                  <p class="portfolio__group-name">Маркетинг</p>
+                <div class="works__group-wrapper">
+                  <h2 class="works__image-title">Проект Prime</h2>
+                  <p class="works__group-name">Маркетинг</p>
                 </div>
               </a>
             </li>
-            <li class="portfolio__card">
-              <a class="portfolio__link" href="">
-                <div class="portfolio__card-wrapper">
+            <li class="works__card">
+              <a class="works__link" href="">
+                <div class="works__image-wrapper">
                   <img
-                    class="portfolio__image"
+                    class="works__image"
                     src="./images/img05.jpg"
                     alt="дві коробочки"
                     width="370"
                   />
-                  <p class="portfolio__meta">
+                  <p class="works__meta">
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                     Mollitia illum ab, suscipit esse tenetur aut velit placeat
                     dignissimos assumenda voluptatum? Exercitationem aliquam
                     ipsam rem magni molestiae, quo error repudiandae quasi.
                   </p>
                 </div>
-                <div class="portfolio__work-wrapper">
-                  <h2 class="portfolio__image-title">Проект Boxes</h2>
-                  <p class="portfolio__group-name">Приложение</p>
+                <div class="works__group-wrapper">
+                  <h2 class="works__image-title">Проект Boxes</h2>
+                  <p class="works__group-name">Приложение</p>
                 </div>
               </a>
             </li>
-            <li class="portfolio__card">
-              <a class="portfolio__link" href="">
-                <div class="portfolio__card-wrapper">
+            <li class="works__card">
+              <a class="works__link" href="">
+                <div class="works__image-wrapper">
                   <img
-                    class="portfolio__image"
+                    class="works__image"
                     src="./images/img06.jpg"
                     alt="компютерний монітор з відкритою веб сторінкою"
                     width="370"
                   />
-                  <p class="portfolio__meta">
+                  <p class="works__meta">
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                     Mollitia illum ab, suscipit esse tenetur aut velit placeat
                     dignissimos assumenda voluptatum? Exercitationem aliquam
                     ipsam rem magni molestiae, quo error repudiandae quasi.
                   </p>
                 </div>
-                <div class="portfolio__work-wrapper">
-                  <h2 class="portfolio__image-title">
-                    Inspiration has no Borders
-                  </h2>
-                  <p class="portfolio__group-name">Веб-сайт</p>
+                <div class="works__group-wrapper">
+                  <h2 class="works__image-title">Inspiration has no Borders</h2>
+                  <p class="works__group-name">Веб-сайт</p>
                 </div>
               </a>
             </li>
-            <li class="portfolio__card">
-              <a class="portfolio__link" href="">
-                <div class="portfolio__card-wrapper">
+            <li class="works__card">
+              <a class="works__link" href="">
+                <div class="works__image-wrapper">
                   <img
-                    class="portfolio__image"
+                    class="works__image"
                     src="./images/img07.jpg"
                     alt="відкрита книга з малюнками"
                     width="370"
                   />
-                  <p class="portfolio__meta">
+                  <p class="works__meta">
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                     Mollitia illum ab, suscipit esse tenetur aut velit placeat
                     dignissimos assumenda voluptatum? Exercitationem aliquam
                     ipsam rem magni molestiae, quo error repudiandae quasi.
                   </p>
                 </div>
-                <div class="portfolio__work-wrapper">
-                  <h2 class="portfolio__image-title">
-                    Издание Limited Edition
-                  </h2>
-                  <p class="portfolio__group-name">Дизайн</p>
+                <div class="works__group-wrapper">
+                  <h2 class="works__image-title">Издание Limited Edition</h2>
+                  <p class="works__group-name">Дизайн</p>
                 </div>
               </a>
             </li>
-            <li class="portfolio__card">
-              <a class="portfolio__link" href="">
-                <div class="portfolio__card-wrapper">
+            <li class="works__card">
+              <a class="works__link" href="">
+                <div class="works__image-wrapper">
                   <img
-                    class="portfolio__image"
+                    class="works__image"
                     src="./images/img08.jpg"
                     alt="картонна бірка проекту LAB EL TAG"
                     width="370"
                   />
-                  <p class="portfolio__meta">
+                  <p class="works__meta">
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                     Mollitia illum ab, suscipit esse tenetur aut velit placeat
                     dignissimos assumenda voluptatum? Exercitationem aliquam
                     ipsam rem magni molestiae, quo error repudiandae quasi.
                   </p>
                 </div>
-                <div class="portfolio__work-wrapper">
-                  <h2 class="portfolio__image-title">Проект LAB</h2>
-                  <p class="portfolio__group-name">Маркетинг</p>
+                <div class="works__group-wrapper">
+                  <h2 class="works__image-title">Проект LAB</h2>
+                  <p class="works__group-name">Маркетинг</p>
                 </div>
               </a>
             </li>
-            <li class="portfolio__card">
-              <a class="portfolio__link" href="">
-                <div class="portfolio__card-wrapper">
+            <li class="works__card">
+              <a class="works__link" href="">
+                <div class="works__image-wrapper">
                   <img
-                    class="portfolio__image"
+                    class="works__image"
                     src="./images/img09.jpg"
                     alt="відкритий ноутбук з вебсторінкою Growing Business"
                     width="370"
                   />
-                  <p class="portfolio__meta">
+                  <p class="works__meta">
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                     Mollitia illum ab, suscipit esse tenetur aut velit placeat
                     dignissimos assumenda voluptatum? Exercitationem aliquam
                     ipsam rem magni molestiae, quo error repudiandae quasi.
                   </p>
                 </div>
-                <div class="portfolio__work-wrapper">
-                  <h2 class="portfolio__image-title">Growing Business</h2>
-                  <p class="portfolio__group-name">Приложение</p>
+                <div class="works__group-wrapper">
+                  <h2 class="works__image-title">Growing Business</h2>
+                  <p class="works__group-name">Приложение</p>
                 </div>
               </a>
             </li>
@@ -330,51 +330,51 @@
         </div>
         <div class="footer__join-container">
           <h3 class="footer__join-title">присоединяйтесь</h3>
-          <ul class="social-networks__list list">
-            <li class="social-network__item">
+          <ul class="social-networks list">
+            <li class="social-networks__item">
               <a
-                class="social-network__link social-network__footer-link"
+                class="social-networks__link social-networks__footer-link"
                 href="https://www.instagram.com/"
                 target="_blank"
                 rel="noopener noreferrer"
               >
-                <svg class="social-network__icon" width="20px" height="20px">
+                <svg class="social-networks__icon" width="20px" height="20px">
                   <use href="./images/symbol-defs.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
-            <li class="social-network__item">
+            <li class="social-networks__item">
               <a
-                class="social-network__link social-network__footer-link"
+                class="social-networks__link social-networks__footer-link"
                 href="https://twitter.com/"
                 target="_blank"
                 rel="noopener noreferrer"
               >
-                <svg class="social-network__icon" width="20px" height="20px">
+                <svg class="social-networks__icon" width="20px" height="20px">
                   <use href="./images/symbol-defs.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
-            <li class="social-network__item">
+            <li class="social-networks__item">
               <a
-                class="social-network__link social-network__footer-link"
+                class="social-networks__link social-networks__footer-link"
                 href="https://www.facebook.com/"
                 target="_blank"
                 rel="noopener noreferrer"
               >
-                <svg class="social-network__icon" width="20px" height="20px">
+                <svg class="social-networks__icon" width="20px" height="20px">
                   <use href="./images/symbol-defs.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
-            <li class="social-network__item">
+            <li class="social-networks__item">
               <a
-                class="social-network__link social-network__footer-link"
+                class="social-networks__link social-networks__footer-link"
                 href="https://www.linkedin.com/"
                 target="_blank"
                 rel="noopener noreferrer"
               >
-                <svg class="social-network__icon" width="20px" height="20px">
+                <svg class="social-networks__icon" width="20px" height="20px">
                   <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                 </svg>
               </a>
